changes to styling design, fixed footer shape divider gap

--- a/static/css/design.css
+++ b/static/css/design.css
@@ -31,6 +31,13 @@
     max-width: 15rem;
     margin-inline: 2rem;
     padding: 1rem;
+    box-shadow: 7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(255 255 255), inset 0px 0px 4px rgb(255 255 255 / 20%), inset 7px 7px 15px rgb(55 84 170 / 0%), inset -7px -7px 20px rgb(255 255 255 / 0%), 0px 0px 4px rgb(255 255 255 / 0%) !important;
+    -moz-box-shadow: 7px 7px 15px rgba(55, 84, 170, .15), -7px -7px 20px rgba(255, 255, 255, 1), inset 0px 0px 4px rgba(255, 255, 255, .2), inset 7px 7px 15px rgba(55, 84, 170, 0), inset -7px -7px 20px rgba(255, 255, 255, 0), 0px 0px 4px rgba(255, 255, 255, 0) !important;
+    -webkit-box-shadow: 7px 7px 15px rgb(55 84 170 / 15%), -7px -7px 20px rgb(255 255 255), inset 0px 0px 4px rgb(255 255 255 / 20%), inset 7px 7px 15px rgb(55 84 170 / 0%), inset -7px -7px 20px rgb(255 255 255 / 0%), 0px 0px 4px rgb(255 255 255 / 0%) !important;
+}
+
+.steps-container.top {
+    margin-top: 3rem;
 }
 
 .image-wrapper {
@@ -72,8 +79,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 23rem;
-    height: 27rem;
+    max-width: 14rem;
+    height: 16rem;
     box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05), inset -5px -5px 5px rgba(255, 255, 255, 0.5), 5px 5px 5px rgba(0,0,0,0.05), -5px -5px 5px rgba(255, 255, 255, 0.5);
     -webkit-box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05), inset -5px -5px 5px rgba(255, 255, 255, 0.5), 5px 5px 5px rgba(0,0,0,0.05), -5px -5px 5px rgba(255, 255, 255, 0.5);
     -moz-box-shadow: inset 5px 5px 5px rgba(0,0,0,0.05), inset -5px -5px 5px rgba(255, 255, 255, 0.5), 5px 5px 5px rgba(0,0,0,0.05), -5px -5px 5px rgba(255, 255, 255, 0.5);
@@ -86,4 +93,25 @@
   height: 24rem;
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
   border-radius: 15px;
+}
+
+.steps-container-thicc {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.steps-container-thicc img {
+    max-height: 20rem;
+    margin-block: 2rem;
+    margin-inline: 2rem;
+}
+
+.text-wrapper-des.divider {
+    text-align: center;
+    padding-block: 2rem;
+    max-width: 30rem;
+    font-size: large;
+    font-family: 'Open Sans';
 }
